website/versioned_docs/version-3.1.3/api-reference/changelog.mdx
---
title: Changelog
sidebar_position: 2
description: RCommon release history covering blob storage abstractions, multi-tenancy support, DDD soft delete, bulk operations, and semantic versioning via MinVer git tags.
---

# Changelog

The authoritative release history for all RCommon packages is maintained on GitHub Releases.

**Full release notes:** [https://github.com/RCommon-Team/RCommon/releases](https://github.com/RCommon-Team/RCommon/releases)

## Recent Changes

### 3.1.3

Outbox silent-failure hardening. Every change is observability-only (new warnings and a startup diagnostic); no method or interface signatures changed and no runtime behavior changed on the success path — fully backward-compatible.

**Fixed**

- **Synchronous `UnitOfWork.Commit()` silently dropped pending domain events.** The obsolete `Commit()` completes the transaction but deliberately skips outbox persistence (Phase 1) and dispatch (Phase 3), so any tracked entity carrying domain events lost them with no error. `Commit()` now logs a `Warning` when the event tracker holds entities with un-dispatched local events, directing callers to `CommitAsync`. Because the `AutoComplete`-on-dispose path routes through `Commit()`, that path is now covered too.
- **`UnitOfWork` disposed without a successful commit was a silent rollback.** With `AutoComplete` off, disposing a unit of work that never called `CommitAsync` rolls back the ambient transaction and discards any writes made in the scope with no error (e.g. a repository write invoked outside a committing `[UnitOfWork]` scope). The dispose-without-commit path now logs a `Warning` so the discarded work is visible.
- **Outbox poller silently dropped events with no subscriber.** When the durable `OutboxProcessingService` drains a message whose event type has no matching subscriber/producer on the poller (processor) host, it marks the row processed and moves on. It now logs a `Warning` once per event type, surfacing the common producer/processor topology mistake of registering a subscriber only on the producer host.

**Added**

- **Outbox routing startup diagnostic.** `AddOutbox` now registers a hosted diagnostic that warns at startup when the effective `IEventRouter` is the in-memory router instead of the outbox router — i.e. a later event-handling registration silently overrode outbox routing (DI is last-registration-wins), which would cause events to fire in-memory and never persist to the outbox.

### 3.1.2

Modular composition, bootstrapping ergonomics, opt-in CQRS transactions, and a docs consolidation pass covering navigation, eight new runnable examples, an end-to-end DDD recipe, and a machine-readable full API reference. All changes in this release are backward-compatible.

**Added**

- **Modular composition support** — `services.AddRCommon()` can now be called from multiple modules in the same process. Registrations merge instead of duplicating or throwing on agreement. See [Modular Composition](../core-concepts/modular-composition.mdx).
- New public API: `IRCommonBuilder.GetOrAddBuilder<TSubBuilder>(Func<TSubBuilder>)` — third-party `WithX<T>` extensions opt into sub-builder caching.
- New public API: `IRCommonBuilder.GetBootstrapDiagnostics()` — retrieve the soft-duplicate report stashed at host startup.
- New public API: `IServiceCollection.IsRCommonInitialized()` — true iff `AddRCommon()` has been called.
- New internal `IHostedService` runs the duplicate-descriptor scanner at host startup and emits a single warning on soft duplicates.
- **`ICqrsBuilder.AddUnitOfWorkToCommandBus()`** — opt-in unit-of-work wrapping for the native `ICommandBus`, via a new `UnitOfWorkCommandBus` decorator. Commands only, not queries; gives the native command bus parity with MediatR's `AddUnitOfWorkToRequestPipeline()`.
- **`TenantScope.Bypass()`** (`RCommon.Security.Claims`) — an ambient, `AsyncLocal`-based, nestable scope that suspends tenant-based repository filtering and stamping for its lifetime. A new `TenantScopeAwareTenantIdAccessor` decorator wraps `ClaimsTenantIdAccessor` and Finbuckle's tenant accessor automatically.
- When exactly one data store is registered and `SetDefaultDataStore` was never called, it is now auto-inferred (logged at `Information`); registering 2+ stores with no default now also logs informationally instead of only surfacing at first use.
- Cross-builder startup diagnostics: a warning is logged when an in-memory event bus builder has subscriptions but no registered producer, and when the event router has events to dispatch but no producers are registered for them (both were previously silent).
- 8 new runnable `Examples/` projects: Dapper, Linq2Db, Sagas, Blob Storage (Azure/S3), State Machines (Stateless), Multi-Tenancy (Finbuckle), and Event Handling (Outbox) — plus an end-to-end [Domain-Driven Design recipe](../examples-recipes/domain-driven-design.mdx) (`Team`/`TeamMembership` aggregate).
- A machine-readable [full API reference](pathname:///api-reference-full.txt), generated directly from built assemblies and their XML doc-comment sidecars.

**Fixed**

- `EFCoreAggregateRepository`/`EFCoreRepository.UpdateAsync` misclassified newly-added child entities with non-default keys (e.g. sequential GUIDs) as `Modified` instead of `Added`, silently dropping the insert. Fixed with explicit reference-based change tracking.
- `Include<TProperty>`/`ThenInclude` threw for collection navigations ("invalid inside an Include operation"); switched to EF Core's string-path `Include()` overload.
- `AddSubscriber<TEvent, THandler>()` on `IInMemoryEventBusBuilder` silently did nothing (the handler was never invoked) unless a separate, undocumented producer registration call was also made. The required producer is now auto-registered.
- The zero-argument `RCommon.FluentValidation.ValidationBuilderExtensions.WithValidation<T>()` overload — a byte-for-byte duplicate of the `ApplicationServices` overload — was deleted, resolving an unconditional `CS0121` ambiguity error when both packages were referenced together.
- **Dapper (`RCommon.Dapper`):** `AddAsync`/`AddRangeAsync` discarded database-generated keys instead of writing them back to the entity after insert. Separately, Dommel's default key resolver treated any `Guid`/`string`-typed `Id` property as database-generated, silently writing `NULL`/default into the primary key column. A new `RCommonKeyPropertyResolver` restricts auto-generation guessing to numeric key types.
- **Linq2Db (`RCommon.Linq2Db`):** entities deriving from `BusinessEntity`/`AggregateRoot<TKey>` failed every insert and query ("no such column") because Linq2Db does not honor `[NotMapped]`. A new `IMetadataReader` implementation excludes the framework-owned event-tracking properties from the entity's column mapping.
- **`RCommon.Finbuckle`:** an unused `new()` generic constraint on `FinbuckleMultiTenantBuilder<TTenantInfo>`/`FinbuckleTenantIdAccessor<TTenantInfo>` broke compilation against Finbuckle's built-in `TenantInfo` type (which has `required` members) on net10.0. The constraint is now conditional per target framework, since net8.0/net9.0 reference an older Finbuckle version whose own interfaces still require it.

**Changed**

- `AddRCommon()` is now idempotent: subsequent calls return the cached `IRCommonBuilder`.
- Singleton-style verbs (`WithSimpleGuidGenerator`, `WithSequentialGuidGenerator`, `WithDateTimeSystem`, `WithJsonSerialization<T>`, `WithSmtpEmailServices`, `WithSendGridEmailServices`) are now idempotent on same-type re-registration. Different-type conflicts throw `RCommonBuilderException` with diagnostic messages.
- `DataStoreFactoryOptions.Register<,>` is now idempotent for identical `(name, base, concrete)` triples. Conflicts (same `(name, base)` with different concrete) throw `UnsupportedDataStoreException` (exception type preserved).
- `AddProducer<T>` now deduplicates by concrete producer type via descriptor scan — distinct producer types still coexist.
- All sub-builder `WithX<T>` extensions route through `GetOrAddBuilder<T>`; generic constraints tightened to `where T : class, ...`.
- `DataStoreNotFoundException`'s message now lists registered stores and remediation steps (message text only; exception type unchanged).
- `EFCorePerisistenceBuilder` (typo) renamed to `EFCorePersistenceBuilder`; the old name remains as an `[Obsolete]` forwarding subclass.
- The `WithValidation<T>(Action<CqrsValidationOptions>)` overload is marked `[Obsolete]` in favor of calling `UseWithCqrs(...)` inside `WithValidation<T>(Action<T>)`.

**Notes**

- Strictly additive public API surface across this release. No method or interface signature removals, and no exception types changed on existing APIs.
- See `Examples/Bootstrapping/Examples.Bootstrapping.MultiModule/` for a runnable demonstration of modular composition.

### 3.1.1

Bug-fix and security patch release.

**Fixed**

- **Cross-host transactional outbox delivery.** Added `OutboxOptions.ImmediateDispatch` (default `true`, fully backward-compatible). When set to `false`, a unit of work persists outbox events but skips the best-effort post-commit in-process dispatch (Phase 3), leaving the durable poller (`OutboxProcessingService`) as the sole dispatcher and marker. This fixes silent loss of cross-host delivery, where a producing host marked rows processed before a subscriber on a different host could consume them. Producer-only hosts should set `ImmediateDispatch = false`. See [Outbox Producer/Processor Topology](../event-handling/outbox-producer-processor-topology.mdx).
- Outbox post-commit dispatch no longer marks a message processed when no in-process producer matched the event; it is left for the poller (defense-in-depth).
- `EFCoreOutboxStore.DeleteProcessedAsync` / `DeleteDeadLetteredAsync` used a `DateTimeOffset` comparison the SQLite provider could not translate. The comparison is now evaluated client-side; SQL Server / PostgreSQL behaviour is unchanged.

**Security**

- Pinned patched **Microsoft.OpenApi 2.7.5** in `RCommon.Authorization.Web` (net10 target), resolving CVE-2026-49451 (GHSA-v5pm-xwqc-g5wc), which was pulled transitively via Swashbuckle 10.x.
- Upgraded the native SQLite binary (**SQLitePCLRaw.lib.e_sqlite3 3.53.3**) in the SQLite-backed test projects, resolving CVE-2025-6965 (GHSA-2m69-gcr7-jv3q).

**Notes**

- Strictly additive public API surface (`OutboxOptions.ImmediateDispatch`); no signature removals, and no behavioural change at the default.
- Website (Docusaurus) build-tooling npm advisories are tracked as a separate follow-up (Docusaurus 3.10 upgrade + theme swizzle migration).

### Blob Storage Abstractions

Added `RCommon.Blobs` as a provider-agnostic blob storage abstraction layer, with two concrete implementations:

- `RCommon.Azure.Blobs` — Azure Blob Storage implementation
- `RCommon.Amazon.S3Objects` — Amazon S3 implementation

### Multi-Tenancy Support

Added complete multi-tenancy infrastructure:

- `RCommon.MultiTenancy` — builder abstraction for registering tenancy providers via `WithMultiTenancy<T>()`
- `RCommon.Finbuckle` — Finbuckle.MultiTenant integration, providing `FinbuckleTenantIdAccessor<TTenantInfo>` that bridges Finbuckle's resolved tenant context to the `ITenantIdAccessor` consumed by all repositories
- All persistence providers (`EFCoreRepository`, `DapperRepository`, `Linq2DbRepository`) automatically filter reads by tenant and stamp writes with the current tenant ID when entities implement `IMultiTenant`

### Domain-Driven Design Support

Added soft delete and multitenancy to the entity layer:

- `ISoftDelete` — opt-in interface for logical deletion; repositories set `IsDeleted = true` and perform an UPDATE instead of a physical DELETE
- `IMultiTenant` — opt-in interface for tenant-scoped entities; repositories filter reads and stamp writes automatically
- `SoftDeleteHelper` and `MultiTenantHelper` utility classes for filter expression building and entity stamping
- `EntityNotFoundException` for consistent "entity not found" error handling with type and ID context

### Repository Soft Delete Extras

Extended all persistence providers with explicit soft delete and bulk operation support:

- `DeleteAsync(entity, isSoftDelete: bool)` overload on all write repositories
- Automatic `!IsDeleted` filtering on all read operations for `ISoftDelete` entities
- Bulk delete via `ExecuteDeleteAsync` on `EFCoreRepository`

### Editorconfig and Code Hygiene

Added `.editorconfig` to enforce consistent code style across the solution. All public methods and complex code paths now carry XML documentation comments.

## Versioning

RCommon uses [MinVer](https://github.com/adamralph/minver) for automatic semantic versioning from git tags. All packages in the solution share the same version number.

Version numbers follow [Semantic Versioning](https://semver.org/):

- **Major** (`x.0.0`) — breaking API changes
- **Minor** (`0.x.0`) — new features, backward-compatible additions
- **Patch** (`0.0.x`) — bug fixes and documentation updates

Pre-release versions (alpha, beta, rc) are tagged accordingly (e.g., `v3.0.0-alpha.1`).

## Release Schedule

RCommon does not follow a fixed release cadence. Releases are made when meaningful features, bug fixes, or breaking changes are ready. Subscribe to [GitHub Releases](https://github.com/RCommon-Team/RCommon/releases) or watch the repository to be notified of new versions.

## Filing Issues

Found a bug or missing a feature? Please open an issue on GitHub:

- **Bug reports:** [https://github.com/RCommon-Team/RCommon/issues/new?template=bug_report.md](https://github.com/RCommon-Team/RCommon/issues/new)
- **Feature requests:** [https://github.com/RCommon-Team/RCommon/issues/new?template=feature_request.md](https://github.com/RCommon-Team/RCommon/issues/new)
- **Discussions:** [https://github.com/RCommon-Team/RCommon/discussions](https://github.com/RCommon-Team/RCommon/discussions)
